Closed
Bug 1218851
Opened 10 years ago
Closed 10 years ago
nsIPresShell::RENDER_IGNORE_VIEWPORT_SCROLLING documentation is misleading.
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: jib, Assigned: tnikkel)
References
Details
Attachments
(1 file)
|
4.81 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
STR: See Bug 1193075 comment 32.
Basically, user-scrolling still registers in the demo shown there, even though the scrollWithPage is absent/false which sets the nsIPresShell::RENDER_IGNORE_VIEWPORT_SCROLLING flag.
Not quite sure what the right component or who the right person is for this bug.
| Assignee | ||
Comment 1•10 years ago
|
||
As currently implemented in the code it looks like the effect of RENDER_IGNORE_VIEWPORT_SCROLLING is to:
-not draw scrollbars
-not clip based on the document viewport
Comments in the code that say it draws as if the document was not scrolled at all do not match what the code implements.
If one adds the RENDER_DOCUMENT_RELATIVE flag then in addition to treating the rect passed in as being relative to the document (and not the viewport) the code will also draw as if there was no scrolling in the document. The comments for this flag seem to also not describe what is implemented.
So I think if you add the RENDER_DOCUMENT_RELATIVE flag you should hopefully get the result you want.
I have no idea about the history of these flags and what we implemented and why and what dependencies there may be. Perhaps the easiest fix is to just rename the flags to correspond to what the code currently does, and adjust the comments accordingly. Although, perhaps the current code got wrongly changed at some point and the initial code the implement the flags matched the comments and there was a good reason for it being that way.
| Reporter | ||
Comment 2•10 years ago
|
||
That worked, thanks!
| Reporter | ||
Comment 4•10 years ago
|
||
(In reply to Timothy Nikkel (:tn) from comment #1)
> Comments in the code that say it draws as if the document was not scrolled
> at all do not match what the code implements.
[...]
> The comments for this flag seem to also not describe what is implemented.
[...]
> Perhaps the easiest fix is to just rename the flags to correspond to what
> the code currently does, and adjust the comments accordingly.
Seems like at least the comments could be improved.
Flags: needinfo?(jib)
Summary: nsIPresShell::RENDER_IGNORE_VIEWPORT_SCROLLING doesn't seem to work. → nsIPresShell::RENDER_IGNORE_VIEWPORT_SCROLLING documentation is misleading.
Comment 5•10 years ago
|
||
:tn - tentatively moved this to layout; please revise if that's wrong. It's not WebRTC. Also, if you can CC or NI whomever should look at it, that would be good. Thanks
Component: WebRTC → Layout
Flags: needinfo?(tnikkel)
| Assignee | ||
Comment 6•10 years ago
|
||
"ignore viewport scrolling" is used in a lot of places, not just this flag. I didn't want to update them all. (Or come up with better names.)
Attachment #8683475 -
Flags: review?(roc) → review+
Comment 8•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in
before you can comment on or make changes to this bug.
Description
•